--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "sass": "^1.22.10",
     "vue": "^2.5.11",
     "vue-router": "^2.8.1",
-    "vue2-datepicker": "^3.11.1"
+    "vue2-datepicker": "^3.11.1",
+    "vuex": "^3.6.2"
   },
   "browserslist": [
     "> 1%",
